# Whisper-Mac-Dictation-and-Service

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  WhisperCPP_LOCAL_SERVICE_CONTRACT.md  WhisperCPP_gateway.env.example  WhisperCPP_gateway_control.command  WhisperCPP_gateway_runner.sh  WhisperCPP_install_accurate_runtime.command  WhisperCPP_install_runtime.command  WhisperCPP_start_gateway.command  WhisperCPP_stop_gateway.command  WhisperCPP_use_accurate_model.command  WhisperCPP_use_balanced_model.command  pyproject.toml
clients/js/: README.md  package.json  tsconfig.json
clients/js/src/: index.ts
clients/python/: README.md  pyproject.toml
clients/python/src/whispercpp_asr_client/: __init__.py  client.py
docs/releases/: v0.2.0.md
examples/: python_stream_client.py
macos-app/: Package.swift  README.md
macos-app/Resources/: Info.plist
macos-app/Sources/WhisperCppRealtimeMacApp/: ASRAppModel.swift  AudioCaptureService.swift  CaptionOverlayView.swift  CaptionWindowController.swift  ControlCenterView.swift  GatewayProtocol.swift  GatewayWebSocketClient.swift  GlobalHotKeyManager.swift  WhisperCppRealtimeMacApp.swift
macos-app/scripts/: export_app.sh
specs/001-stable-local-release/: spec.md
src/whispercpp_realtime_asr/: __init__.py  __main__.py  app.py  config.py  engine.py  models.py  streaming.py
src/whispercpp_realtime_asr/ui/: app.js  index.html  styles.css
