[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispercpp-realtime-asr"
version = "0.2.0"
description = "Reusable local HTTP and WebSocket ASR gateway for whisper.cpp"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.35,<1.0",
  "websockets>=12,<16",
]

[project.scripts]
whispercpp-asr = "whispercpp_realtime_asr.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whispercpp_realtime_asr = ["ui/*.html", "ui/*.css", "ui/*.js"]
