[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispercpp-asr-client"
version = "0.2.0"
description = "Python SDK for the whispercpp realtime ASR gateway"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.28,<1.0",
  "websockets>=15,<16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
